chore: optimize images

--- a/src/app/components/shared/sections/post-section/post-section.component.html
+++ b/src/app/components/shared/sections/post-section/post-section.component.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="related-post-content">
                         <div *ngFor="let recentPost of recentPosts" class="related-post-single">
-                            <div class="related-post-img image-bg" [ngStyle]="{'background': 'url(' + recentPost.image + ')', 'background-position': 'center top', 'background-repeat': 'no-repeat', 'background-size': 'cover'}"></div>
+                            <div class="related-post-img" [ngStyle]="{'background': 'url(' + recentPost.image + ')', 'background-position': 'center top', 'background-repeat': 'no-repeat', 'background-size': 'cover'}"></div>
                             <div class="related-post-title">
                                 <a [routerLink]="recentPost.link" [title]="recentPost.title">{{ recentPost.title }}</a>
                             </div>
