--- a/src/app/components/shared/sections/blog-section/blog-section.component.html
+++ b/src/app/components/shared/sections/blog-section/blog-section.component.html
@@ -14,7 +14,7 @@
                 <div *ngFor="let post of posts; let i = index"
                     class="col s12 mgt-20" [ngClass]="i === 0 && enlargeFirstPost ? 'center-text' : 'm6'">
                     <div class="col s12 blog-wrapper w-block shadow-bg pd-0 wow fadeIn animated">
-                        <div class="col s12 blog-img pd-0 image-bg"
+                        <div class="col s12 blog-img pd-0"
                             [ngStyle]="{'background': 'url(' + post.image + ')', 'background-position': 'center top', 'background-repeat': 'no-repeat', 'background-size': 'cover'}">
                             <a class="blog-date waves-effect waves-light"
                                 href="javascript:void(0);">{{ post.date | date: 'longDate' }}</a>
