--- a/src/app/components/shared/sections/post-section/post-section.component.css
+++ b/src/app/components/shared/sections/post-section/post-section.component.css
@@ -6,3 +6,7 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
+
+.single-blog-section ::ng-deep img.open-in-popup {
+  cursor: pointer;
+}
