--- a/src/app/components/shared/sections/timeline-section/timeline-section.component.html
+++ b/src/app/components/shared/sections/timeline-section/timeline-section.component.html
@@ -11,7 +11,7 @@
                         <!-- Single Timeline Item -->
                         <li *ngFor="let item of items"
                             class="wow animated"
-                            [ngClass]="item.position === 'right' ? 'timeline-inverted fadeInRight' : 'fadeInLeft'">
+                            [ngClass]="item.position === 'right' && !isMobile() ? 'timeline-inverted fadeInRight' : 'fadeInLeft'">
                             <div class="timeline-badge">
                                 <a><i class="fa fa-circle"></i></a>
                             </div>
